# agent-ideas

./: .gitignore  main.py  pyproject.toml
notebooks/: agent-sof-olympiad.ipynb  agent-vaibhav-profile.ipynb  agentic-ai-explained.ipynb  agentic-ai-quiz-master.ipynb  hello-world-example.ipynb
notebooks/openai-framework/: one-liner-producing-agents.ipynb  open-ai-fw-vocabulary.ipynb
resources/profile/: AI-generated-professional-summary.txt
src/professional_profile_chatbox/: README.md  ppc.py
src/tweeting-bot/: README.md  agent.py  app.py  pyproject.toml  requirements.txt
src/tweeting-bot/config/: settings.py
src/tweeting-bot/prompts/: tweet_prompt.py
src/tweeting-bot/tools/: input_validator.py  tweet_generator.py  tweet_validator.py  whatsapp_share.py  x_auth.py  x_poster.py  x_token.py
