[project]
name = "agent-ideas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "notebook>=7.5.0",
    "openai>=2.9.0",
    "pip>=25.3",
    "pypdf>=6.4.0",
]
